<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dictionary.FilterBottomSheet">

    <data>
        <variable
            name="filters"
            type="com.example.floraleye.models.Taxonomy" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/str_filter_dictionary"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/filterTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/kingdomTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="18sp"
                    android:text="@string/str_field_details_kingdom"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/phylumTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/kingdomSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/kingdom_array"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/phylumSpinner"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phylumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="18sp"
                    android:text="@string/str_field_details_phylum"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/genusEditText"
                    app:layout_constraintTop_toBottomOf="@id/kingdomTextView" />

                <Spinner
                    android:id="@+id/phylumSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/phylum_array"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/genusEditText"
                    app:layout_constraintTop_toBottomOf="@id/kingdomSpinner"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/genusEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/str_field_details_genus"
                    android:inputType="textFilter"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginBottom="8dp"
                    android:text="@{filters.genus}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phylumSpinner"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/familyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/str_field_details_family"
                    android:inputType="textFilter"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginBottom="8dp"
                    android:text="@{filters.family}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genusEditText"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/speciesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/str_field_details_species"
                    android:inputType="textFilter"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_marginBottom="8dp"
                    android:text="@{filters.species}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/familyEditText"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fieldLayout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/applyFiltersButton"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_apply_filter"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:cornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/resetFiltersButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetFiltersButton"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_reset_filter"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:cornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/applyFiltersButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>